--- a/driver-details/driver-detail-each2.html
+++ b/driver-details/driver-detail-each2.html
@@ -29,12 +29,11 @@
     <div class="container">
 
       <div class="driver-details">
-        <div class="driver-name">Ruchi</div>
+        <div id="d_name" class="driver-name">Ritik Bohra</div>
         <div class="driver-desc">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
-          voluptatem aliquam dolore rem natus eaque, necessitatibus quas, quod
-          eum doloremque maiores, iste perferendis. Non recusandae ab ipsa saepe
-          eaque suscipit.
+          As a dedicated delivery agent, I strive to provide exceptional service
+          to all of my customers. I am committed to ensuring that every package
+          is delivered on time and in perfect condition.
         </div>
       </div>
 
@@ -51,21 +50,21 @@
           </tr>
 
           <tr class="table-row">
-            <td class="table-col">Spare Part Name</td>
-            <td class="table-col">Spare Part ID</td>
-            <td class="table-col">Date of Purchase</td>
-            <td class="table-col">Expected Maintenance Date</td>
-            <td class="table-col">Expected Maintenance Cost</td>
-            <td class="table-col">Exchange time</td>
+            <td class="table-col">Gears</td>
+            <td class="table-col">ABC123</td>
+            <td class="table-col">27 March, 2023</td>
+            <td class="table-col">May 2025</td>
+            <td class="table-col">10000</td>
+            <td class="table-col">5 years</td>
           </tr>
 
           <tr class="table-row">
-            <td class="table-col">Spare Part Name</td>
-            <td class="table-col">Spare Part ID</td>
-            <td class="table-col">Date of Purchase</td>
-            <td class="table-col">Expected Maintenance Date</td>
-            <td class="table-col">Expected Maintenance Cost</td>
-            <td class="table-col">Exchange time</td>
+            <td class="table-col">Screws</td>
+            <td class="table-col">XYZ123</td>
+            <td class="table-col">21 January, 2023</td>
+            <td class="table-col">April 2027</td>
+            <td class="table-col">9000</td>
+            <td class="table-col">7 years</td>
           </tr>
         </table>
       </div>
