--- a/driver-details/driver-detail-each4.html
+++ b/driver-details/driver-detail-each4.html
@@ -67,6 +67,8 @@
           </tr>
         </table>
       </div>
+      <input id="btn" type="submit">
     </div>
+    <script type="text/javascript" src="driver-details.js"></script>
   </body>
 </html>
