--- a/driver-details/driver-detail-each3.html
+++ b/driver-details/driver-detail-each3.html
@@ -69,6 +69,8 @@
         </table>
       </div>
 
+      <input id="btn" type="submit">
     </div>
+    <script type="text/javascript" src="driver-details.js"></script>
   </body>
 </html>
